<resources>
    <string name="app_name">LB8DB</string>
    <string name="text_pickedDate">Выбранная дата</string>
    <string name="text_showTasks">Показать задачи</string>
    <string name="text_showCategories">Показать категории</string>
    <string name="text_XPath">XPath</string>
    <string name="text_XSLT">XSLT</string>
    <string name="text_allCategories">Все категории</string>

    <string name="text_name">Название</string>
    <string name="text_info">Информация</string>
    <string name="text_category">Категория</string>

    <string name="text_enterCategory">Введите категорию:</string>

    <string name="text_add">Добавить</string>
    <string name="text_update">Изменить</string>
    <string name="text_delete">Удалить</string>
</resources>