<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

    <TextView
        android:id="@+id/pickedDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_pickedDate"
        android:textAlignment="center" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <Button
            android:id="@+id/showTasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showTasks"
            android:text="@string/text_showTasks" />

        <Button
            android:id="@+id/showCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showCategories"
            android:text="@string/text_showCategories" />

        <Button
            android:id="@+id/showXPath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showXPath"
            android:text="@string/text_XPath" />

        <Button
            android:id="@+id/showXSLT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showXSLT"
            android:text="@string/text_XSLT" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>